--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.7",
     "@prisma/client": "^6.1.0",
     "@supabase/supabase-js": "^2.47.10",
-    "next": "15.1.3",
+    "@types/mdx": "^2.0.13",
+    "next": "^15.2.0-canary.65",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sugar-high": "^0.9.2",
     "supabase": "^2.1.1"
   },
   "devDependencies": {
